<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">联塑竞价</string>

    <string name="loading">请求数据中，请稍候&#8230;</string>
    <string name="image_loading">图片处理中，请稍候&#8230;</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="empty">暂无相关订单</string>

    <string name="app_fullname">联塑商城竞价平台</string>
    <string name="website">www.lessomall.com</string>

    <string name="text_login">登 录</string>
    <string name="text_account">账号 : </string>
    <string name="text_password">密码 : </string>
    <string name="text_login_tips_account">请输入账号</string>
    <string name="text_login_tips_password">请输入密码</string>


    <string name="RECODE_FAILED_USER_NOTEXIST">用户不存在</string>
    <string name="RECODE_FAILED_PASSWORD_WRONG">密码错误</string>
    <string name="RECODE_FAILED_USER_LOGIN">登录失败</string>
    <string name="RECODE_ERROR_OTHERS">抱歉，程序出了点问题</string>

    <string name="text_post_need">发布需求</string>
    <string name="text_check_order">查看订单</string>
    <string name="text_check_news">查看消息</string>
    <string name="text_bidding_news">竞价信息</string>
    <string name="text_qulify_check">资质审核</string>
    <string name="text_business_check">交易监控</string>

    <string name="confirm_button1">确定</string>
    <string name="confirm_button2">取消</string>
    <string name="text_finish">完成</string>
    <string name="text_cancel">取消</string>
    <string name="text_save">保存</string>
    <string name="text_save_commit">保存并提交</string>


    <!-- dealer -->
    <string name="bidding_payment">支付方式</string>
    <string name="bidding_delivery">交收方式</string>
    <string name="bidding_delivery_address">交收地址</string>
    <string name="bidding_other">其他要求：</string>
    <string name="bidding_expdate">有&#160;&#160;效&#160;&#160;期</string>
    <string name="bidding_deadline">截止日期</string>
    <string name="bidding_deliverydate">交收日期</string>
    <string name="bidding_tax">税票类型</string>
    <string name="bidding_product">所需产品</string>
    <string name="bidding_topic">主&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;题</string>
    <string name="bidding_certificate">保证金付款凭证：</string>
    <string name="bidding_rule1">我已经阅读并同意</string>
    <string name="bidding_rule2">《竞价单发布规则》</string>

    <!-- dialog bottom title -->
    <string name="dialog_bottom_fapiao">税票种类</string>
    <string name="dialog_bottom_fapiao_A">增值税发票</string>
    <string name="dialog_bottom_fapiao_B">普通发票</string>
    <string name="dialog_bottom_fapiao_C">无需发票</string>

    <string name="dialog_bottom_zhifu">支付方式</string>
    <string name="dialog_bottom_zhifu_A">信用支付</string>
    <string name="dialog_bottom_zhifu_B">现金支付</string>
    <string name="dialog_bottom_zhifu_C">汇款支付</string>

    <string name="dialog_bottom_fenlei">所属分类</string>

    <string name="dialog_bottom_pic">图片上传</string>
    <string name="dialog_bottom_pic_A">拍照</string>
    <string name="dialog_bottom_pic_B">从相册中选择</string>

    <string name="dialog_bottom_receive">交收方式</string>
    <string name="dialog_bottom_receive_A">配送</string>
    <string name="dialog_bottom_receive_B">自提</string>

    <string name="tips_success_baojia">报价成功</string>
    <string name="tips_success_send">发货成功</string>
    <string name="tips_success_receive">收货成功</string>
    <string name="tips_success_operate">操作成功</string>

    <string name="TAG_KEY_A">TAG_KEY_A</string>
    <string name="TAG_KEY_B">TAG_KEY_B</string>

    <string name="update_tips">发现最新版本，是否更新?</string>
    <string name="no_data_tips">查询不到数据</string>
    <string name="no_data_error">连接不到服务器</string>
    <string name="last_data_tips">这是最后的一页了</string>
    <string name="SD_card_error">SD卡状态异常</string>
    <string name="upload_image_error">上传图片失败</string>
    <string name="photo_finish_tips">长按图片即可删除</string>

</resources>