<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/MALL_C3"
    android:gravity="left"
    android:orientation="vertical"
    android:paddingBottom="88dp"
    android:paddingLeft="@dimen/interval_A"
    android:paddingRight="@dimen/interval_A">

    <TextView
        style="@style/STYLE_TITLE_BOTTOM_DIALOG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/interval_D"
        android:paddingTop="@dimen/interval_D"
        android:text="@string/dialog_bottom_pic" />

    <include layout="@layout/line" />

    <LinearLayout
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_x1"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/interval_C"
        android:paddingTop="@dimen/interval_C">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_bottom_pic_A"
            android:textColor="@color/BASE_TEXT_COLOR"
            android:textSize="@dimen/dialog_text_size" />

    </LinearLayout>

    <include layout="@layout/line" />

    <LinearLayout
        android:id="@+id/gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_x1"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/interval_C"
        android:paddingTop="@dimen/interval_C">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_bottom_pic_B"
            android:textColor="@color/BASE_TEXT_COLOR"
            android:textSize="@dimen/dialog_text_size" />

    </LinearLayout>

    <include layout="@layout/line" />

</LinearLayout>