<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/BOTTOM_BG"
    android:orientation="vertical">

    <include layout="@layout/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/interval_D"
        android:paddingTop="@dimen/interval_D"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/dealer_release"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/dealer_release_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@drawable/release_x"
                android:clickable="true" />

            <TextView
                android:id="@+id/dealer_release_txt"
                style="@style/STYLE_BOTTOM_TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/interval_D"
                android:clickable="true"
                android:text="@string/text_post_need" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/dealer_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/dealer_order_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@drawable/order_x"
                android:clickable="true" />

            <TextView
                android:id="@+id/dealer_order_txt"
                style="@style/STYLE_BOTTOM_TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/interval_D"
                android:clickable="true"
                android:text="@string/text_check_order" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/dealer_news"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/dealer_news_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@drawable/news_x"
                android:clickable="true" />

            <TextView
                android:id="@+id/dealer_news_txt"
                style="@style/STYLE_BOTTOM_TXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/interval_D"
                android:clickable="true"
                android:text="@string/text_check_news" />


        </LinearLayout>

    </LinearLayout>


</LinearLayout>


